[package]
name = "higher"
version = "0.1.1"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Higher kinded types, in a way"
repository = "https://github.com/bodil/higher"
documentation = "http://docs.rs/higher"
readme = "../README.md"
categories = []
keywords = ["hkt"]

[badges]
circle-ci = { repository = "bodil/higher" }

[dependencies]

[dev-dependencies]
proptest = "0.9.1"
