[package]
name = "higher-derive"
version = "0.1.1"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Custom derives for `higher`"
repository = "https://github.com/bodil/higher"
documentation = "http://docs.rs/higher-derive"
readme = "../README.md"
categories = []
keywords = ["hkt"]

[lib]
proc_macro = true

[dependencies]
syn = { version = "0.15.26", features = ["derive", "extra-traits"] }
quote = "0.6.11"
proc-macro2 = "0.4.27"
